Depend on angularized mousetrap

--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,7 @@
     "**/.*"
   ],
   "devDependencies": {
-    "angular-mousetrap": "~1.7.0",
+    "angular-mousetrap": "https://github.com/nanoscopic/mousetrap.git#1.7.0",
     "angular-mocks": "~1.2.15",
     "angular-route": "~1.2.15"
   }
