--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,7 @@
     "**/.*"
   ],
   "dependencies": {
-    "angular-mousetrap": "https://github.com/nanoscopic/mousetrap.git#1.7.9"
+    "mousetrap": "https://github.com/nanoscopic/mousetrap.git#1.7.10"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.15",
